--- a/report.html
+++ b/report.html
@@ -43,6 +43,19 @@
         <div class="titleBannerDiv">
             <img class="titleBannerImg" src="image/report/waitReport.jpg">
         </div>
+
+        <!-- <div class="text-center">
+                <div class="mb-4 h4" id="ui_D_1">
+                    <div class="d-inline font-blod" id="ui_D_1_1_username">體驗者</div>
+                    <div class="d-inline">您好，依據您的問卷填答資料，您的</div>
+                    <div class="d-inline font-blod">總缺氧指數</div>
+                    <div class="d-inline">為</div>
+                    <div class="d-inline font-blod text-danger" id="ui_D_1_2_total_value"></div>
+                    <div class="d-inline" id="ui_D_1_3_total_wording"></div>
+                </div>
+                <p class="mb-4 h4" id="ui_D_2"></p>
+            </div> -->
+            
             <div class="firstContent">
                 <div class="formTop"></div>
                 <div class="formTitle">您的主要體質</div>
@@ -66,7 +79,7 @@
                 <div class="decTitle">供給性缺氧</div>
                 <div class="decTitle2" id="ui_A_1_1">供氧障礙程度(0-10)：</div>
                 <ul class="decContent pl-2">
-                    <p class="card-text" id="card-B-1-default">您的供氧能力尚佳，請繼續保持。</p>      
+                    <p class="card-text cardB" id="card-B-1-default">您的供氧能力尚佳，請繼續保持。</p>      
                     <li class="card-text ui_B_1"></li>
                     <li class="card-text ui_B_1"></li>
                     <li class="card-text ui_B_1"></li>
@@ -79,7 +92,7 @@
                 <div class="decTitle">耗損性缺氧</div>
                 <div class="decTitle2" id="ui_A_2_1">能量透支程度(0-10)：</div>
                 <ul class="decContent pl-2">
-                    <p class="card-text" id="card-B-2-default">您沒有嚴重的能量透支情形，請持續留意。</p>
+                    <p class="card-text cardB" id="card-B-2-default">您沒有嚴重的能量透支情形，請持續留意。</p>
                     <li class="card-text ui_B_2"></li>
                     <li class="card-text ui_B_2"></li>
                     <li class="card-text ui_B_2"></li>
@@ -92,7 +105,7 @@
                 <div class="decTitle">熱性體質</div>
                 <div class="decTitle2" id="ui_A_3_1">損傷發炎程度(0-10)：</div>
                 <ul class="decContent pl-2">
-                    <p class="card-text" id="card-B-3-default">您的代謝情形良好，無活躍的損傷發炎反應。</p>
+                    <p class="card-text cardB" id="card-B-3-default">您的代謝情形良好，無活躍的損傷發炎反應。</p>
                     <li class="card-text ui_B_3"></li>
                     <li class="card-text ui_B_3"></li>
                     <li class="card-text ui_B_3"></li>
@@ -105,7 +118,7 @@
                 <div class="decTitle">濕性體質</div>
                 <div class="decTitle2" id="ui_A_4_1">循環瘀滯程度(0-10)：</div>
                 <ul class="decContent pl-2">
-                    <p class="card-text" id="card-B-4-default">您的循環狀況良好，無明顯瘀滯現象。</p>
+                    <p class="card-text cardB" id="card-B-4-default">您的循環狀況良好，無明顯瘀滯現象。</p>
                     <li class="card-text ui_B_4"></li>
                     <li class="card-text ui_B_4"></li>
                     <li class="card-text ui_B_4"></li>
@@ -118,7 +131,7 @@
                 <div class="decTitle">寒性體質</div>
                 <div class="decTitle2" id="ui_A_5_1">失調衰退程度(0-10)：</div>
                 <ul class="decContent pl-2">
-                    <p class="card-text" id="card-B-5-default">您的身體機能運作正常，無顯著失調現象。</p>
+                    <p class="card-text cardB" id="card-B-5-default">您的身體機能運作正常，無顯著失調現象。</p>
                     <li class="card-text ui_B_5"></li>
                     <li class="card-text ui_B_5"></li>
                     <li class="card-text ui_B_5"></li>
